# kwstandby

./: .gitreview  AUTHORS  CONTRIBUTING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  tox.ini
doc/: Makefile
doc/source/: conf.py  index.rst
etc/init/: kwstandby.conf
etc/kwstandby/: kwstandby.conf
kwstandby/: base.py
kwstandby/api/: acl.py  app.py  v1.py
kwstandby/openstack/common/: excutils.py  fileutils.py  gettextutils.py  jsonutils.py  log.py  policy.py
