[metadata]
name = kwstandby
version = 2014.3
summary = Efficiency framework for OpenStack
description-file =
    README.rst
author = François Rossigneux
author-email = francois.rossigneux@inria.fr
home-page = https://launchpad.net/kwstandby
classifier =
    Development Status :: 4 - Beta
        Environment :: OpenStack
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    kwstandby

[entry_points]
console_scripts =
    kwstandby = kwstandby.api.app:start

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
